--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hyde"]
 	path = themes/hyde
 	url = https://github.com/spf13/hyde.git
+[submodule "static/css/et-book"]
+	path = static/css/et-book
+	url = https://github.com/edwardtufte/et-book.git
